# graphs

./: .travis.yml  CHANGELOG  CHANGELOG.markdown  README.markdown  cabal.haskell-ci  graphs.cabal
.github/workflows/: haskell-ci.yml
Data/Graph/: AdjacencyMatrix.hs  Class.hs  Dual.hs  Empty.hs  PropertyMap.hs
Data/Graph/Adjacency/: List.hs  Matrix.hs
Data/Graph/Algorithm/: BreadthFirstSearch.hs  DepthFirstSearch.hs  Dfs.hs
Data/Graph/Class/: Adjacency.hs  AdjacencyList.hs  AdjacencyMatrix.hs  Bidirectional.hs  EdgeEnumerable.hs  Edged.hs  Incidence.hs  VertexEnumerable.hs
Data/Graph/Class/Adjacency/: List.hs  Matrix.hs
Data/Graph/Pure/: Class.hs
Data/Graph/Pure/Adjacency/: List.hs  Matrix.hs
Data/Graph/Pure/Class/: Adjacency.hs  AdjacencyMatrix.hs  Bidirectional.hs  Edged.hs  Incidence.hs
src/Data/Graph/: AdjacencyList.hs  AdjacencyMatrix.hs  Algorithm.hs  Class.hs  Dual.hs  PropertyMap.hs
src/Data/Graph/Algorithm/: BreadthFirstSearch.hs  DepthFirstSearch.hs  GraphSearch.hs
src/Data/Graph/Class/: AdjacencyList.hs  AdjacencyMatrix.hs  Bidirectional.hs  EdgeEnumerable.hs  VertexEnumerable.hs
src/Data/Graph/Internal/: Color.hs
