name:          graphs
category:      Algorithms, Data Structures, Graphs
version:       0.6
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/graphs
bug-reports:   http://github.com/ekmett/graphs/issues
copyright:     Copyright (C) 2011-2013 Edward A. Kmett
synopsis:      A simple monadic graph library
description:   A simple monadic graph library
build-type:    Simple

extra-source-files: .travis.yml CHANGELOG.markdown README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/graphs.git

library
  other-extensions:
    TypeFamilies
    FlexibleContexts

  build-depends:
    base         >= 4       && < 5,
    array        >= 0.3     && < 0.6,
    transformers >= 0.2.2   && < 0.4,
    containers   >= 0.3     && < 0.6,
    void         >= 0.5.5.1 && < 1

  exposed-modules:
    Data.Graph.AdjacencyList
    Data.Graph.AdjacencyMatrix
    Data.Graph.Algorithm
    Data.Graph.Algorithm.DepthFirstSearch
    Data.Graph.Algorithm.BreadthFirstSearch
    Data.Graph.Class
    Data.Graph.Class.AdjacencyList
    Data.Graph.Class.AdjacencyMatrix
    Data.Graph.Class.EdgeEnumerable
    Data.Graph.Class.Bidirectional
    Data.Graph.Class.VertexEnumerable
    Data.Graph.Dual
    Data.Graph.PropertyMap
  other-modules:
    Data.Graph.Internal.Color

  ghc-options: -Wall
  hs-source-dirs: src
